--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>cvs</artifactId>
     <name>Hudson CVS Plug-in</name>
     <packaging>hpi</packaging>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
     <url>http://wiki.hudson-ci.org/display/HUDSON/CVS+Plugin</url>
     <description>Integrates Hudson with CVS SCM</description>
 
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.eclipse.hudson.main</groupId>
             <artifactId>hudson-test-framework</artifactId>
-            <version>${project.parent.version}</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
