--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,8 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>r09</version>
+            <version>10.0.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
