--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.eclipse.hudson.plugins</groupId>
         <artifactId>hudson-plugin-parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0-M1-1</version>
     </parent>
 
     <groupId>org.eclipse.hudson.plugins</groupId>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.eclipse.hudson.main</groupId>
             <artifactId>hudson-test-framework</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
