--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>cvs</artifactId>
     <name>Hudson CVS Plug-in</name>
     <packaging>hpi</packaging>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.0.1</version>
     <url>http://wiki.hudson-ci.org/display/HUDSON/CVS+Plugin</url>
     <description>Integrates Hudson with CVS SCM</description>
 
